add Access DataBase BaseClass

--- a/AutoComplete/App.config
+++ b/AutoComplete/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <appSettings>
+    <add key="OutputDB" value="Server=GeOutputDB601;Database=OperationData;Net=dbmssocn; Pwd=Q%0kfc@; User Id=GEXoiReader" />
+    <add key="TemplatePATH" value="Template" />
+  </appSettings>
+  
 </configuration>
