--- a/AutoComplete/AutoComplete.csproj
+++ b/AutoComplete/AutoComplete.csproj
@@ -36,6 +36,7 @@
       <HintPath>..\..\..\workfile\TestDb\TestDb\NPOI 2.1.1\ICSharpCode.SharpZipLib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net" />
     <Reference Include="System.Xml.Linq" />
@@ -52,6 +53,8 @@
     <Compile Include="ACChange\RealTime.cs" />
     <Compile Include="ACChange\SecurityTypeChange.cs" />
     <Compile Include="Comm\Tool.cs" />
+    <Compile Include="DataUtil.cs" />
+    <Compile Include="AccessOutputDB.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
